package ve.com.teeac.mynotes.core.utils

object TestTag {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_SELECT = "TITLE_SELECT"
    const val DATE_SELECT = "DATE_SELECT"
    const val COLOR_SELECT = "COLOR_SELECT"
    const val ASCENDING_SELECT = "ASCENDING_SELECT"
    const val DESCENDING_SELECT = "DESCENDING_SELECT"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
}